--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -12,4 +12,4 @@ set( PLUGIN_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Plugins/bin" )
 add_subdirectory( FancyMesh )
 add_subdirectory( Animation )
 add_subdirectory( Skinning )
-#add_subdirectory( MulitgraphViewer )
+add_subdirectory( ImGui )
