Fix a bug in the compilation of assimp

--- a/3rdPartyLibraries/CMakeLists.txt
+++ b/3rdPartyLibraries/CMakeLists.txt
@@ -5,7 +5,9 @@ if ((${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang"))
     add_definitions( -fexceptions -frtti -w )
 elseif ( UNIX OR MINGW )
     add_definitions( -fexceptions -frtti -w )
-    if ( MINGW )
+    if ( UNIX )
+        set(CMAKE_DEBUG_POSTFIX "d")
+    elseif ( MINGW )
         add_definitions (-D_USE_MATH_DEFINES)
     endif()
 elseif (MSVC)
